# guitarEffectApplication

./: .gitignore  CMakeLists.txt  README.txt
algoTesting_matlab/: BitCrusher.m  distortion_HardClipping.m  overdrive_SoftClipping.m  tremolo.m
algoTesting_matlab/resources/project/root/: GiiBklLgTxteCEmomM8RCvWT0nQd.xml
app/: CMakeLists.txt
app/src/: main.cpp
audioEffectsLib/: CMakeLists.txt
audioEffectsLib/benchmarkTests/: CMakeLists.txt  buildScript.sh
audioEffectsLib/benchmarkTests/src/: audioEffectsLibBenchmark.cpp
audioEffectsLib/graphTests/: CMakeLists.txt
audioEffectsLib/graphTests/src/: audioEffectsLibGraphTests.cpp
audioEffectsLib/inc/: audioEffects.h  reverbLib.h
audioEffectsLib/src/: CMakeLists.txt  audioEffects.cpp
audioEffectsLib/tests/: CMakeLists.txt  audioEffectsLibTest.cc
jackScripts/: README.txt  ajConnections-script  ajSnapshotService.service  buttonApp-script  buttonApp.py  buttonApp.service  config  config2  disableServices.sh  displayApp-script  displayApp.service  effects-script  effectsDisplay.py  effectsService.service  fullConnConfig  gstreamer-script  gstreamerApp  gstreamerService.service  guitareffectsApp  jackConnections  jackServer  jackServer-script  jackServer.service  setupServices.sh  wavPlayerApp
sandBox/: CMakeLists.txt
sandBox/src/: main.cpp
